@@ -1570,10 +1570,10 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
     or in a new one (<code>new</code>). Note: use <code>new</code> if you are
     linking to <code>phpmyadmin.net</code>.</dd>
 
-    <dt id="cfg_LeftDisplayTableFilterMinimum">$cfg['LeftDisplayTableFilterMinimum']
+    <dt id="cfg_NavigationTreeDisplayItemFilterMinimum">$cfg['NavigationTreeDisplayItemFilterMinimum']
     integer</dt>
-    <dd>Defines the minimum number of tables to display a JavaScript filter box above the
-    list of tables in the left frame.
+    <dd>Defines the minimum number of items (tables, views, routines and events)
+    to display a JavaScript filter box above the list of items in the left frame.
     Defaults to <code>30</code>. To disable the filter completely some high number
     can be used (e.g. 9999)</dd>
 
