@@ -272,7 +272,6 @@ $strConfigLeftDisplayLogo_desc = __('Show logo in left frame');
 $strConfigLeftDisplayLogo_name = __('Display logo');
 $strConfigLeftDisplayServers_desc = __('Display server choice at the top of the left frame');
 $strConfigLeftDisplayServers_name = __('Display servers selection');
-$strConfigLeftDisplayTableFilterMinimum_name = __('Minimum number of tables to display the table filter box');
 $strConfigLeftDisplayDatabaseFilterMinimum_name = __('Minimum number of databases to display the database filter box');
 $strConfigLeftLogoLink_desc = __('URL where logo in the navigation frame will point to');
 $strConfigLeftLogoLink_name = __('Logo link URL');
@@ -309,6 +308,8 @@ $strConfigMcryptDisableWarning_name = __('mcrypt warning');
 $strConfigMemoryLimit_desc = __('The number of bytes a script is allowed to allocate, eg. [kbd]32M[/kbd] ([kbd]0[/kbd] for no limit)');
 $strConfigMemoryLimit_name = __('Memory limit');
 $strConfigNavigationTreeDefaultTabTable_name = __('Target for quick access icon');
+$strConfigNavigationTreeDisplayItemFilterMinimum_desc = __('Defines the minimum number of items (tables, views, routines and events) to display a filter box.');
+$strConfigNavigationTreeDisplayItemFilterMinimum_name = __('Minimum number of items to display the filter box');
 $strConfigNavigationTreeEnableGrouping_desc = __('Group items in the navigation tree (determined by the separator defined below)');
 $strConfigNavigationTreeEnableGrouping_name = __('Group items in the tree');
 $strConfigNavigationTreeDbSeparator_desc = __('String that separates databases into different tree levels');
