@@ -902,7 +902,7 @@ class PMA_NavigationTree
                 || $node->real_name == 'procedures'
                 || $node->real_name == 'events')
             )
-            && $node->realParent()->getPresence($node->real_name) >= (int)$GLOBALS['cfg']['LeftDisplayTableFilterMinimum']
+            && $node->realParent()->getPresence($node->real_name) >= (int)$GLOBALS['cfg']['NavigationTreeDisplayItemFilterMinimum']
         ) {
             $paths = $node->getPaths();
             $url_params = array(
