@@ -61,6 +61,7 @@ VerboseMultiSubmit, ReplaceHelpImg
 + Renamed configuration directive: LeftFrameTableLevel => NavigationTreeTableLevel
 + Renamed configuration directive: LeftPointerEnable => NavigationTreePointerEnable
 + Renamed configuration directive: LeftDefaultTabTable => NavigationTreeDefaultTabTable
++ Renamed configuration directive: LeftDisplayTableFilterMinimum => NavigationTreeDisplayTableFilterMinimum
 
 3.5.4.0 (not yet released)
 - bug #3570212 [edit] uuid_short() is a no-arguments function
